--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,14 @@ dependencies:
   qr_code_scanner: ^1.0.1
   intl_phone_field: ^3.2.0
   intl: ^0.19.0
-  shared_preferences: ^2.2.3
   qr_flutter: ^4.1.0
-  blue_thermal_printer: ^1.2.2
-  permission_handler: ^10.2.0 
+  flutter_spinkit: ^5.1.0
+
+
+  shared_preferences: ^2.0.6
+  permission_handler: ^10.0.0
+  flutter_bluetooth_printer: ^2.16.10
+  flutter_blue_plus: ^1.32.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
